trunk/Archive2/62/f4b5ead0b774be/output
main.cpp:8:44: error: expected the class name after '~' to name a destructor
    iterator->std::vector<int>::iterator::~iterator();
                                           ^
1 error generated.
